Move thumbnail generation logic to a (re-usable) Helper.

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,2 +1,3 @@
 1.0.0: First version of Vdlp.Glide
 1.0.1: Catch exception when file cannot be found or image could not be created.
+1.1.0: Move thumbnail generation logic to a (re-usable) Helper.
