--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "league/glide-laravel": "^1.0"
+        "php": "^7.1||^8.0",
+        "league/glide-laravel": "^1.0",
+        "composer/installers": "^1.0"
     }
 }
