--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "league/glide-laravel": "^1.0",
-        "composer/installers": "^1.0"
+        "composer/installers": "^1.0",
+        "october/system": "^2.0"
     },
     "archive": {
         "exclude": [
