--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,8 +1,9 @@
 v1.0.0: First version of Vdlp.Glide
 v1.0.1: Catch exception when file cannot be found or image could not be created.
 v1.1.0: Move thumbnail generation logic to a (re-usable) Helper.
-v2.0.0: !!! October Build 1.1.0 required, make laravel 6 compatible.
+v2.0.0: October Build 1.1.0 required, make laravel 6 compatible.
 v2.0.1: Update plugin dependencies
-v3.0.0: !!! Drop support for PHP 7.1 (minimum required PHP version 7.4) - Review implementation (see README.md)
+v3.0.0: Drop support for PHP 7.1 (minimum required PHP version 7.4) - Review implementation (see README.md)
 v3.0.1: Add missing CHANGELOG file
 v3.1.0: Maintenance release
+v3.2.0: Add support for October CMS 3.0
