--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0.2",
         "composer/installers": "^1.0 || ^2.0",
         "league/glide-laravel": "^1.0",
         "october/rain": "^2.0 || ^3.0"
@@ -20,12 +20,5 @@
             "type": "composer",
             "url": "https://gateway.octobercms.com"
         }
-    ],
-    "archive": {
-        "exclude": [
-            ".gitignore",
-            ".github",
-            ".idea/"
-        ]
-    }
+    ]
 }
