--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -7,3 +7,4 @@ v3.0.0: Drop support for PHP 7.1 (minimum required PHP version 7.4) - Review imp
 v3.0.1: Add missing CHANGELOG file
 v3.1.0: Maintenance release
 v3.2.0: Add support for October CMS 3.0
+v4.0.0: See CHANGELOG.md for details
